--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .btn{
-    @apply inline-flex items-center h-12 px-6 mb-3 font-medium text-white transition duration-200 rounded-lg shadow-md  md:mb-0 bg-indigo-400 hover:bg-indigo-500
+    @apply inline-flex items-center h-12 px-6 mb-3 font-medium text-white transition duration-200 rounded-lg shadow-md  md:mb-0 bg-purple-400 hover:bg-purple-600
   }
 
   .active{
@@ -15,7 +15,7 @@
   }
   
   .my-container{
-    @apply px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20
+    @apply px-4 py-12 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20
   }
   
  
